adjusting the workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,4 +31,8 @@ workflows:
     jobs:
       - build
       - one
+        requires: 
+          - build
       - two
+        requires: 
+          - one
