--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,9 @@ jobs:
       - run: sleep 25
 workflows:
   version: 2
-  one_and_two:
+  build-test-and-deploy:
     jobs:
       - build
       - one
+          requires:
+            - build
