--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,6 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
-      - one
+      - one:
           requires:
             - build
