--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,13 @@ jobs:
       - checkout
       - run: echo "This is the fourth acceptance test"    
       - run: sleep 25
+  deployment:
+    docker:
+      - image: circleci/ruby:2.4.1
+    steps:
+      - checkout
+      - run: echo "Alriught, fine. Let's deploy this!"    
+      - run: sleep 25
 workflows:
   version: 2
   build-one-and-two:
@@ -56,3 +63,9 @@ workflows:
       - four: 
           requires:
             - build
+      - deployment:
+          requires:
+            - one
+            - two
+            - three
+            - four
