add confirmation step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,9 +63,13 @@ workflows:
       - four: 
           requires:
             - build
-      - deployment:
-          requires:
+      - confirm:
+          type: approval
+          requires: 
             - one
             - two
             - three
             - four
+      - deployment:
+          requires:
+            - confirm
